[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caphtb"
version = "1.0.0"
description = "CLI bonita para a API do Hack The Box"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "0xCAPgz" }]
license = { text = "MIT" }
keywords = ["hackthebox", "htb", "cli", "pentest", "ctf"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.scripts]
caphtb = "caphtb.cli:main"

[tool.setuptools.packages.find]
include = ["caphtb*"]
